# sketchpad

./: .env.example  .gitignore  Dockerfile  Justfile  Makefile  pyproject.toml  requirements.txt  test-oauth.sh  test_oauth.py  test_security.py
.claude/skills/test-sketchpad/: SKILL.md
.github/workflows/: build.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/debug/: pydantic-validation-leak.md  write-file-mode-schema-wrong.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/milestones/v1.0-research/: ARCHITECTURE.md  SUMMARY.md
.planning/milestones/v1.1-research/: FEATURES.md  SUMMARY.md
.planning/notes/: mcp-tool-annotations.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: 02-github-oauth-app.md  03-cloudflare-tunnel.md  04-deploy.md  05-claude-ai-setup.md  README.md  cloudflare-tunnel.md  github-oauth-app.md  google-oauth-app.md  local-development.md  mcp-inspector.md  synology-nfs.md
k8s/: deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
k8s/cloudflared/: deployment.yaml
k8s/placeholder/: deployment.yaml
k8s/secrets/: README.md
src/sketchpad/: __main__.py  config.py  middleware.py  server.py  tools.py  user_identity.py
tests/: conftest.py  test_descriptions.py  test_parameter_validation.py  test_storage_limits.py  test_user_isolation.py
(+104 files in other folders)
