[project]
name = "sketchpad"
version = "0.1.0"
description = "A minimal MCP server with OAuth 2.1 for Claude AI"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sketchpad"]
