[project]
name = "sketchpad"
version = "0.1.0"
description = "A minimal MCP server with OAuth 2.1 for Claude AI"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sketchpad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
