[project]
name = "sketchpad"
version = "0.1.0"
description = "A minimal MCP server with OAuth 2.1 for Claude AI"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.15"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sketchpad"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
